[package]
name = "xrpl-rust"
version = "0.1.2"
edition = "2018"
authors = ["Tanveer Wahid <tan@wahid.email>"]
description = "A 100% Rust library to interact with the XRPL"
readme = "README.md"
license = "ISC"
repository = "https://github.com/589labs/xrpl-rust"

keywords = ["xrpl", "no_std"]
categories = ["no-std"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
name = "xrpl"
crate-type = ["lib"]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
sha2 = "0.10.2"
rand_hc = "0.3.1"
ripemd = "0.1.1"
ed25519-dalek = "1.0.1"
secp256k1 = { version = "0.24.0", default-features = false, features = [
    "alloc",
] }
bs58 = { version = "0.4.0", default-features = false, features = [
    "check",
    "alloc",
] }
indexmap = { version = "1.7.0", features = ["serde"] }
regex = { version = "1.5.4", default-features = false }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.2", default-features = false }
crypto-bigint = { version = "0.4.7" }
rust_decimal = { version = "1.17.0", default-features = false, features = [
    "serde",
] }
chrono = { version = "0.4.19", default-features = false, features = [
    "alloc",
    "clock",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false, features = [
    "alloc",
] }
serde_with = "1.11.0"
serde_repr = "0.1"
zeroize = "1.5.7"
hashbrown = { version = "0.13.2", default-features = false, features = ["serde"] }
fnv = { version = "1.0.7", default-features = false }
derive-new = { version = "0.5.9", default-features = false }
thiserror-no-std = "2.0.2"
anyhow = { version ="1.0.69", default-features = false }
futures = { version = "0.3.25", default-features = false }
embedded-tls = "0.12.0"
reqwless = "0.5.0"
tokio = { version = "1.27.0", default-features = false, features = ["net"], optional = true }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"], default-features = false, optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
tokio-util = { version = "0.7.7", optional = true }
heapless = "0.7.16"
bytes = { version = "1.4.0", default-features = false }
embedded-io = { version = "0.4.0", features = ["async"] }
pin-project-lite = "0.2.9"

[dependencies.embedded-websocket]
# git version needed to use `framer_async`
git = "https://github.com/ninjasource/embedded-websocket"
version = "0.9.2"
default-features = false

[dependencies.embassy-net]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-net"
version = "0.1.0"
features = ["nightly", "tcp", "medium-ethernet", "dhcpv4", "unstable-traits"]

[dependencies.embassy-net-driver]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-net-driver"
version = "0.1.0"

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-futures"
version = "0.1.0"

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
package = "embassy-time"
version = "0.1.0"
optional = true

[dev-dependencies]
criterion = "0.3.5"
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["std", "core", "models", "utils", "net"]
net = ["models"]
models = ["core"]
core = ["utils"]
utils = []
std = ["tokio", "embedded-websocket/std", "async-std", "tokio-rustls", "tokio-util", "rand/std", "regex/std", "chrono/std", "rand/std_rng", "hex/std", "rust_decimal/std", "bs58/std", "serde/std", "indexmap/std", "secp256k1/std"]
